--- a/style.css
+++ b/style.css
@@ -40,3 +40,13 @@ header {
     justify-content: space-between;
     align-items: center;
 }
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo h1 {
+    font-size: 1.5rem;
+    margin-left: 10px;
+}
