--- a/style.css
+++ b/style.css
@@ -50,3 +50,23 @@ header {
     font-size: 1.5rem;
     margin-left: 10px;
 }
+
+nav ul {
+    display: flex;
+    list-style: none;
+}
+
+nav ul li {
+    margin-left: 20px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    transition: opacity 0.3s;
+}
+
+nav ul li a:hover {
+    opacity: 0.8;
+}
