Mengubah footer menjadi susunan kolom

--- a/style.css
+++ b/style.css
@@ -347,4 +347,8 @@ footer {
         width: 100%;
         justify-content: space-between;
     }
+
+    .footer-content {
+        flex-direction: column;
+    }
 }
